<resources>
    <string name="app_name">故事友</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="loading">正在加载...</string>
    <string name="input_profile">填写个人资料</string>
    <string name="add_avatar">添加头像</string>
    <string name="pseudonym">笔名</string>
    <string name="please_input_pseudonym">请填写笔名</string>
    <string name="please_check_pseudonym">笔名不符合要求，请检查</string>
    <string name="checking_pseudonym">正在检查笔名...</string>
    <string name="pseudonym_regulation">支持2—12个汉字、字母、数字</string>
    <string name="gushihao_regulation">支持5—20个字母、数字、下划线或减号，以字母开头</string>
    <string name="hometown">故乡</string>
    <string name="choose_hometown">选择故乡</string>
    <string name="please_choose_hometown">请选择故乡</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_choose_gender">请选择性别</string>
    <string name="next">下一步</string>
    <string name="register_user_agreement">注册即表示你已阅读并同意《故事友用户协议》</string>
    <string name="user_agreement">故事友用户协议</string>
    <string-array name="addPhoto">
        <item>拍照</item>
        <item>从相册中选择</item>
    </string-array>
    <string name="can_not_take_picture">无法获取图片</string>
    <string name="no_image_source_available">无可用图片源</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="known">知道了</string>
    <string name="to_enable">去开启</string>
    <string name="launch_storage_permission_hint">故事友需要存储空间权限，否则无法提供相应服务，现在去开启？</string>
    <string name="launch_location_permission_hint">故事友需要位置信息权限，否则无法提供相应服务，现在去开启？</string>
    <string name="launch_phone_state_permission_hint">故事友需要电话权限，否则无法提供相应服务，现在去开启？</string>
    <string name="picture_permission_hint">获取照片需要存储空间权限，现在去开启？</string>
    <string name="set_password">设置密码</string>
    <string name="mobile_phone">手机号</string>
    <string name="mobile_phone_error_length">手机号长度</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="after_can_get_verification_code">%d秒后可重新获取</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="mobile_error">手机号不正确</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="code_sending">正在发送...</string>
    <string name="code_sent">验证码已发送，请查收短信</string>
    <string name="password_regulation">8—20个字符，同时包含数字和字母，且不包含空格</string>
    <string name="please_check_password">密码不符合要求，请检查</string>
    <string name="please_set_password">请设置密码</string>
    <string name="registering">注册中...</string>
    <string name="register_success">注册成功</string>
    <string name="not_connect_server">无法连接到服务器</string>
    <string name="connect_again">重新连接</string>
    <string name="login_account">手机号/故事号</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="please_input_account">请输入帐号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="account_password_error">帐号或密码错误</string>
    <string name="logining">正在登录...</string>
    <string name="find_pwd">找回密码</string>
    <string name="validate_pseudonym_hint">为了你的帐号安全，需要验证手机号和笔名</string>
    <string name="validate">验证</string>
    <string name="set_new_password">设置新密码</string>
    <string name="pseudonym_error">笔名不正确</string>
    <string name="validating">正在验证...</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="submit">提交</string>
    <string name="give_up_set_new_pwd_hint">确定放弃设置新密码？</string>
    <string name="please_set_new_pwd">请设置新密码</string>
    <string name="please_set_new_pwd_again">请再填写一次新密码</string>
    <string name="two_pwd_diff">两次填写的密码不一致</string>
    <string name="submiting">正在提交...</string>
    <string name="set_success">设置成功</string>
    <string name="network_unvailable">当前网络不可用，请检查</string>
    <string name="story">故事</string>
    <string name="friend">好友</string>
    <string name="explor">发现</string>
    <string name="mine">我的</string>
    <string name="diary">日记</string>
    <string name="mood">心情</string>
    <string name="collect">收藏</string>
    <string name="night">夜晚</string>
    <string name="settings">设置</string>
    <string name="follower">粉丝</string>
    <string name="following">关注</string>
    <string name="mine_gushihao">故事号：%s</string>
    <string name="initializing">请稍等，正在初始化...</string>
    <string name="message_alert">消息提醒</string>
    <string name="not_disturb_mode">勿扰模式</string>
    <string name="privacy">隐私相关</string>
    <string name="common_settings">通用设置</string>
    <string name="account_management">帐号管理</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_gushiyou">关于故事友</string>
    <string name="logout">退出帐号</string>
    <string name="logout_alert">确定退出帐号？</string>
    <string name="logouting">正在退出...</string>
    <string name="next_item">下一项</string>
    <string name="gushihao">故事号</string>
    <string name="search_friend">查找好友</string>
    <string name="gushihao_pseudonym">故事号/笔名</string>
    <string name="searching_friend">正在搜索...</string>
    <string name="the_user_not_exists">该用户不存在</string>
    <string name="search">搜索</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="cancel_following">取消关注</string>
    <string name="report_problem">举报</string>
    <string name="delete">删除</string>
    <string name="defriend">加入黑名单</string>
    <string name="remove_from_blacklist">移出黑名单</string>
    <string name="signature">个性签名</string>
    <string name="follow">关注</string>
    <string name="not_write_story_hint">作者暂未创作 ^_^</string>
    <string name="add_remark">添加备注</string>
    <string name="modify_remark">修改备注</string>
    <string name="add">添加</string>
    <string name="remark">备注</string>
    <string name="add_to_be_friend">加为好友</string>
    <string name="friend_request">好友请求</string>
    <string name="send">发送</string>
    <string name="sent">已发送</string>
    <string name="input_greetting">打个招呼</string>
    <string name="input_friend_word_hint">对方开启了好友口令，需要进行验证</string>
    <string name="input_friend_word">填写好友口令</string>
    <string name="input_friend_remark">填写好友备注</string>
    <string name="account_status_changed_relogin">帐号状态有变动，需进行重新登录</string>
    <string name="friend_request_sent">已发送好友请求</string>
    <string name="send_success">发送成功</string>
    <string name="sending_friend_request">正在发送好友请求...</string>
    <string name="please_input_greetting">打个招呼呗</string>
    <string name="please_input_friend_word">请填写好友口令</string>
    <string name="someone_send_friend_request">请求添加你为好友</string>
    <string name="someone_agreed_friend_request">同意了你的好友请求</string>
    <string name="you_added_friend_can_chat">你已添加对方，可以开始聊天了</string>
    <string name="new_friends_status_expired">已过期</string>
    <string name="new_friends">新的好友</string>
    <string name="friend_count">%1$d 位好友</string>
    <string name="agree">同意</string>
    <string name="agree_request">同意请求</string>
    <string name="added">已添加</string>
    <string name="no_data">暂无数据</string>
    <string name="handling">处理中...</string>
    <string name="chat">聊天</string>
    <string name="chat_not_friend_alert">与对方成为好友后才可聊天</string>
    <string name="loading_faild_retry">加载失败，点击重试</string>
    <string name="loading_faild">加载失败</string>
    <string name="offline_do_not_view">离线状态下不能查看</string>
    <string name="deleting">删除中...</string>
    <string name="deleted">已删除</string>
    <string name="delete_friend_alert">确定将对方从好友列表中删除？</string>
    <string name="has_been_friend_to_chat">已成为好友</string>
    <string name="put_in_blacklist_alert">确定将其加入黑名单？</string>
    <string name="puted_in_blacklist">已加入黑名单</string>
    <string name="removed_from_blacklist">已移出黑名单</string>
    <string name="opened_friend_circle">已开放好友圈</string>
    <string name="shielded_friend_circle">已屏蔽好友圈</string>
    <string name="chat_no_message_hint">暂无消息</string>
    <string name="message_text_max_char_count_alert">单次最多发送%1$d个字符</string>
    <string name="recent_contact_no_data">暂无聊天信息</string>
    <string name="delete_the_chat_alert">删除该聊天</string>
    <string name="you_are_in_hoh_blacklist">你已在对方的黑名单中</string>
    <string name="hoh_mutes_your_message">对方屏蔽了你的消息</string>
    <string name="resend">重发</string>
    <string name="copy">复制</string>
    <string name="copied">已复制</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="location">位置</string>
    <string name="camera_permission_alert">拍照需要存储空间权限，现在去开启？</string>
    <string name="album_permission_alert">相册需要存储空间权限，现在去开启？</string>
    <string name="save_image">保存图片</string>
    <string name="save_image_success_alert">图片已保存至：\n%1$s</string>
    <string name="save_failed">保存失败</string>
    <string name="all_images">所有图片</string>
    <string name="images_count">%1$d张</string>
    <string name="max_selected_image_count_alert">最多只能选择%1$d张图片</string>
    <string name="select_image_alert">请选择图片</string>
    <string name="select">选择</string>
    <string name="write_diary">写日记</string>
    <string name="save">保存</string>
    <string name="set_location">所在位置</string>
    <string name="synchronize_cloud">同步云端</string>
    <string name="record_everyday">记录每一天</string>
    <string name="date">日期</string>
    <string name="write_weather">填写天气</string>
    <string name="write_date">填写日期</string>
    <string name="font_size">字体大小</string>
    <string-array name="font_size_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="font_color">字体颜色</string>
    <string name="back">返回</string>
    <string name="presets">预设</string>
    <string name="custom">自定义</string>
    <string name="restore_default">恢复默认</string>
    <string name="font_background_color">字体背景色</string>
    <string name="add_link">添加链接</string>
    <string name="link_name">链接名称</string>
    <string name="link_address">链接地址</string>
    <string name="the_function_need_storage_permission_alert">需要存储空间权限，现在去开启？</string>
    <string name="the_function_need_location_permission_alert">需要位置信息权限，现在去开启？</string>
    <string name="write_image_description">填写图片描述</string>
    <string name="image_description">图片描述</string>
    <string name="getting_location">正在获取位置信息...</string>
    <string name="getting_location_error">获取位置信息出错</string>
    <string name="custom_location">自定义位置</string>
    <string name="no_location">不显示位置</string>
    <string name="saved">已保存</string>
    <string name="occurred_error">发生错误</string>
    <string name="calendar_month">M月</string>
    <string name="calendar_day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="calendar_sans_serif" translatable="false">sans-serif</string>
    <string name="diary_count">共 %1$d 篇</string>
    <string name="diary_title">y年M月d日</string>
    <string name="modify">修改</string>
    <string name="modified">已修改</string>
    <string name="modify_diary">修改日记</string>
    <string name="delete_diary_alert">确定删除这篇日记？</string>
    <string name="save_modified_diary_alert">是否保存修改？</string>
    <string name="save_diary_alert">是否保存日记？</string>
    <string name="view">查看</string>
    <string name="abandon">放弃</string>
    <string name="set_diary_password">设置日记密码</string>
    <string name="diary_password">日记密码</string>
    <string name="input_diary_password_alert">请填写6位数密码</string>
    <string name="input_diary_confirm_password_alert">请再次填写以确认</string>
    <string name="input_diary_password_diff_alert">两次填写的密码不一致</string>
    <string name="finish">完成</string>
    <string name="input_diary_password_hint">请输入日记密码</string>
    <string name="input_6_diary_password_alert">请输入6位数的日记密码</string>
    <string name="verify">验证</string>
    <string name="forget_diary_password">忘记日记密码？</string>
</resources>