<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuCancelFollowing"
        android:icon="@drawable/ic_cancel_white_24dp"
        android:title="@string/cancel_following"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuReportProblem"
        android:icon="@drawable/ic_report_problem_white_24dp"
        android:title="@string/report_problem"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuDefriend"
        android:icon="@drawable/ic_block_white_24dp"
        android:title="@string/defriend"
        app:showAsAction="never" />
</menu>
