<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by 邱志立 on 17-2-26 下午12:28
  ~ Copyright (c) 2017. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gushiyou.app.main.mvp.ui.activity.FindPasswordActivity">

    <android.support.v7.widget.AppCompatTextView
        style="@style/SecondaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate_pseudonym_hint" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etMobile"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_vertical_margin"
        android:hint="@string/mobile_phone"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/text_cursor"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/textPrimary" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etPseudonym"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pseudonym"
        android:inputType="text"
        android:maxLength="12"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/text_cursor"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/textPrimary" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnValidate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:text="@string/validate"
        android:theme="@style/NormalDarkButtonTheme" />
</LinearLayout>
