<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by 邱志立 on 17-2-26 下午12:28
  ~ Copyright (c) 2017. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_new_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gushiyou.app.main.mvp.ui.activity.SetNewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etVerificationCode"
            style="@style/PrimaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@color/textPrimary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnGetVerificationCode"
            android:layout_width="@dimen/get_verification_code_btn_width"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginLeft="@dimen/medium_horizontal_margin"
            android:text="@string/get_verification_code"
            android:theme="@style/NormalDarkButtonTheme" />
    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etNewPassword"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pwd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/text_cursor"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_minCharacters="8"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/textPrimary" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etConfirmPassword"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pwd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/text_cursor"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/textPrimary" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:text="@string/submit"
        android:theme="@style/NormalDarkButtonTheme" />
</LinearLayout>
