<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by 邱志立 on 17-2-26 下午12:28
  ~ Copyright (c) 2017. All rights reserved.
  -->

<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gushiyou.app.main.mvp.ui.activity.SetRegisterPasswordActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etAccount"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_account"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/text_cursor"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/textPrimary" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etPassword"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/text_cursor"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/textPrimary" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:text="@string/login"
        android:theme="@style/NormalDarkButtonTheme" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvFindPwd"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forget_pwd"
        android:textColor="@color/link"
        android:textSize="@dimen/secondary_text_size" />
</com.zhy.autolayout.AutoLinearLayout>