<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by 邱志立 on 17-2-26 下午12:28
  ~ Copyright (c) 2017. All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.gushiyou.app.main.mvp.ui.activity.InputProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ViewSwitcher
            android:id="@+id/vsAvatar"
            android:layout_width="@dimen/big_avatar_size"
            android:layout_height="@dimen/big_avatar_size">

            <LinearLayout
                android:id="@+id/llAvatar"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_photo_camera_grey_600_48dp" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/SecondaryTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/add_avatar" />
            </LinearLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/button_padding"
                app:riv_border_color="@color/grey"
                app:riv_border_width="@dimen/avatar_border_width"
                app:riv_corner_radius="@dimen/round_corner_size"
                app:riv_oval="false" />
        </ViewSwitcher>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPseudonym"
            style="@style/PrimaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/vsAvatar"
            android:hint="@string/pseudonym"
            android:inputType="text"
            android:maxLength="12"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_autoValidate="true"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_minCharacters="2"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@color/textPrimary" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etHometown"
            style="@style/PrimaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPseudonym"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/vsAvatar"
            android:hint="@string/hometown"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@color/textPrimary" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etHometown"
            android:layout_marginBottom="@dimen/radio_group_margin_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/radio_group_margin_vertical"
            android:layout_toRightOf="@+id/vsAvatar"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/gender"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/primary_text_size" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbMale"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbFemale"
                style="@style/PrimaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/gender_margin_horizontal"
                android:text="@string/female" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:layout_below="@+id/rgGender"
            android:layout_centerHorizontal="true"
            android:text="@string/next"
            android:theme="@style/NormalDarkButtonTheme" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvUserAgreement"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnNext"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/register_user_agreement" />
    </RelativeLayout>
</ScrollView>