<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by 邱志立 on 17-2-26 下午12:28
  ~ Copyright (c) 2017. All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_friend_application"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gushiyou.app.main.mvp.ui.activity.FriendRequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etFriendValidation"
            style="@style/PrimaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_greetting"
            android:maxLength="34"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@color/textPrimary" />

        <LinearLayout
            android:id="@+id/llFriendWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etFriendWord"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_friend_word"
                android:maxLength="18"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColor="@color/textPrimary" />

            <TextView
                style="@style/SmallestTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_vertical_margin"
                android:text="@string/input_friend_word_hint" />
        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etFriendRemark"
            style="@style/PrimaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:hint="@string/input_friend_remark"
            android:maxLength="36"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@color/textPrimary" />
    </LinearLayout>
</ScrollView>
