<!--
  ~ Created by 邱志立 on 17-5-26 上午11:52
  ~ Copyright (c) 2017. All rights reserved.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gushiyou.app.main.mvp.ui.fragment.VerifyDiaryPasswordFragment">

    <TextView
        android:id="@+id/tvPseudonym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/textPrimary"
        android:textSize="24dp" />

    <TextView
        style="@style/PrimaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/input_diary_password_hint" />

    <com.gushiyou.app.main.widget.PwdInputView
        android:id="@+id/pivDiaryPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diary_password_input_view_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:cursorVisible="false"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:lines="1"
        android:maxLength="6" />

    <TextView
        android:id="@+id/tvChanceCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_vertical_margin"
        android:textColor="@color/red"
        android:textSize="@dimen/smallest_text_size"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginTop="@dimen/medium_vertical_margin"
        android:text="@string/verify"
        android:theme="@style/NormalDarkButtonTheme" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvForgetPwd"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_diary_password"
        android:textColor="@color/link"
        android:textSize="@dimen/secondary_text_size" />
</LinearLayout>
